# predicting-glucose-levels

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bak.prefect.yaml  prefect.yaml  pyproject.toml  setup.py
.github/workflows/: build.yaml  build.yml  deploy.yaml  job-template.yml  setup-python.yml
config/: source_tables.json
config/metadata/tables/: treatments.json
config/schemas/: entries.json  treatments.json
docker/: Dockerfile  development.yml  docker-compose.yml  entrypoint.sh  production.yml
docs/: Makefile  conf.py  index.rst  make.bat
predicting-glucose-levels/: LICENSE  Makefile  requirements.txt  setup.py
predicting-glucose-levels/docker/: docker-compose.yml
predicting-glucose-levels/docs/: conf.py
predicting-glucose-levels/src/: main.py
predicting-glucose-levels/src/data/ingestion/: ingester.py  source_table.py
predicting-glucose-levels/src/data/storage/: abstract_storage.py  mongo_storage.py
predicting-glucose-levels/src/helpers/: general.py
predicting-glucose-levels/src/tests/: conftest.py
predicting-glucose-levels/tests/data/: test_ingester.py
predicting_glucose_levels/: __init__.py  bootstrap.py  flows.py  main.py  prefect.yaml
predicting_glucose_levels/data/: metadata.py  table_metadata.py
predicting_glucose_levels/data/ingestion/: ingester.py
predicting_glucose_levels/data/storage/: abstract_storage.py  mongo_storage.py
predicting_glucose_levels/helpers/: config.py  general.py
src/: bootstrap.py  main.py
src/data/: metadata.py  table_metadata.py
src/data/ingestion/: ingester.py  source_table.py
src/data/storage/: abstract_storage.py  mongo_storage.py
src/helpers/: config.py  general.py
tests/: conftest.py
tests/data/: test_ingester.py  test_mongo_storage.py
workflows/: build.yaml
(+23 files in other folders)
