[tool.poetry]
name = "predicting-glucose-levels"
version = "0.1.0"
description = ""
authors = ["Aucke Bos <aucke.bos97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
