[tool.poetry]
name = "predicting-glucose-levels"
version = "0.1.0"
description = ""
authors = ["Aucke Bos <aucke.bos97@gmail.com>"]
license = "MIT"
packages = [
    { include = "predicting_glucose_levels", from="." },
]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"
click = "^8.1.3"
mlflow = "^2.2.2"
install = "^1.3.5"
python-dotenv = "^1.0.0"
pymongo = "^4.3.3"
isort = "^5.12.0"
autopep8 = "^2.0.2"
pre-commit = "^3.3.3"
black = "^23.7.0"
pytest = "^7.4.0"
mongomock = "^4.1.2"
jsonschema = "^4.18.4"
kink = "^0.6.6"
autoflake = "^2.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
glucose = "predicting_glucose_levels.main:cli"